vanila js: updating readme file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
           "args": ["-nologo"]
         }
     },
-    "terminal.integrated.defaultProfile.windows": "PowerShell -nologo"
+    "terminal.integrated.defaultProfile.windows": "PowerShell -nologo",
+    "editor.formatOnType": true
 }
